--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "jwt-simple": "^0.5.6",
     "moment": "^2.29.4",
     "mongoose": "^6.9.0",
