--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jwt-simple": "^0.5.6",
     "moment": "^2.29.4",
     "mongoose": "^6.9.0",
+    "pdf-creator-node": "^2.3.5",
     "raw-body": "^2.5.1",
     "validator": "^13.9.0"
   },
