--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Backend proyecto fundacion social crecer",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "cross-env NODE_ENV=test jest --testTimeout=5000",
     "start": "node index.js",
     "dev": "nodemon index.js"
   },
@@ -19,9 +19,11 @@
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-validator": "^6.15.0",
+    "jest": "^29.4.3",
     "jsonwebtoken": "^9.0.0",
     "jwt-simple": "^0.5.6",
     "moment": "^2.29.4",
@@ -29,6 +31,7 @@
     "nodemailer": "^6.9.1",
     "pdf-creator-node": "^2.3.5",
     "raw-body": "^2.5.1",
+    "supertest": "^6.3.3",
     "validator": "^13.9.0"
   },
   "devDependencies": {
